presentations/1-introduction/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: presentations
  labels:
    name: presentations
