presentations/1-introduction/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: introduction-presentation
  namespace: presentations
  labels:
    app: introduction-presentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: introduction-presentation
  template:
    metadata:
      labels:
        app: introduction-presentation
    spec:
      containers:
      - name: introduction-presentation
        image: 289831833738.dkr.ecr.eu-north-1.amazonaws.com/presentations/introduction:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
