presentations/1-introduction/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: introduction-presentation-service
  namespace: presentations
spec:
  selector:
    app: introduction-presentation
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
